# dat204m-final-project

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  README.md  pyproject.toml
.agents/skills/ipynb-modification/: SKILL.md
.cursor/project/: data_registry.md  model_registry.md
.cursor/rules/: agent-workflows.mdc  data-organization.mdc  project-overview.mdc  tech-stack.mdc
aws/: hub_infrastructure.yaml  s3_bucket_policy.json  sagemaker_bootstrap.sh
docs/: data_profile.md  session_history.md  specs.md  team_roles.md
docs/agent/: implementation_plan.md  plan.md  project_context.md  task.md
docs/audits/: final_refactors.md
docs/plans/: lstm_design.md  lstm_implementation.md  refactoring_master_plan.md
notebooks/: 01_eda_descriptive_analytics.ipynb  02_ml_feature_engineering_training.ipynb  03_ml_evaluation_error_analysis.ipynb
src/: __init__.py  cli.py  config.py  exceptions.py
src/features/: __init__.py  indicators.py  indicators_spark.py
src/models/: __init__.py  evaluation.py  train.py
src/pipeline/: __init__.py  download_klines.py  preprocess.py  preprocess_spark.py  sample_generator.py  sample_generator_spark.py  schemas.py  smoke_test.py
src/utils/: __init__.py  aws_client.py  helpers.py  seed.py  spark_client.py
tests/: __init__.py  conftest.py  test_config_and_base.py  test_evaluation.py  test_features.py  test_lstm.py  test_models.py  test_pipelines.py  test_refactoring.py  test_spark_pipelines.py
