[project]
name = "dat204m-final-project"
version = "0.1.0"
description = "Big data pipeline and machine learning project for Binance Spot K-lines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.34",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pyspark>=4.1.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "binance-historical-data>=0.1.14",
    "duckdb>=1.5.4",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "types-python-dateutil>=2.9.0.20260518",
    "types-seaborn>=0.13.2.20260518",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "spark: marks tests that require PySpark (deselect with '-m \"not spark\"')",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pyrefly]
search-path = ["."]
